# dnd

./: .gitignore  .gitmodules
deadsands/: pelicanconf.py  pyproject.toml  requirements.txt
deadsands/content/: notes
deadsands/content/bestiary/: blink-bird.md  rolling-cactus.md  sand-bear.md  sand-strider.md
deadsands/content/dm/: desert-travel-rules.md  hooks.md
deadsands/content/images/: notes
deadsands/content/images/tokens/: README.md  rolling_cactus.png~
deadsands/content/locations/: blooming-wastes.md  calamity-ridge.md  caramelized-chocolate-smoke-clan.md  dust-river-canyon.md  gopher-gulch.md  tanos-edge.md  the-haunted-hills.md
deadsands/content/lore/: cities-and-trade.md  concerning-lizardfolk.md  demographics.md  languages.md  the-path-to-the-chamber-of-stars.md
deadsands/content/mechanics/: desert-travel-rules.md
deadsands/content/pages/: index.md  maps.md  style.md
deadsands/content/regions/: blooming-wastes.md  calamity-ridge.md  dust-river-canyon.md  gopher-gulch.md
deadsands/content/session0/: on-genre-theme-and-mechanics.md
deadsands/content/stores/: angry-andoks-apothecary.md  generals-store.md
deadsands/deadsands-theme/old/: site_index.html
deadsands/deadsands-theme/static/deadsands/css/: style.css
deadsands/deadsands-theme/templates/: archives.html  article.html  base.html  bottom-nav.html  index.html  location.html  locations-index.html  macros.html  monster.html  page.html  recent.html  region.html  settlement.html  statblock.html  twocolumn_recent.html
deadsands/deadsands-theme/templates/pages/: index.html
deadsands/markdown-templates/: default.md  location.md  monster.md  region.md  store.md
deadsands/output/: authors.html  index.html  sitemap.xml
deadsands/output/archives/: index.html
deadsands/output/category/: index.html
deadsands/output/dm/: index.html
deadsands/output/dm/desert-travel-rules/: index.html
deadsands/output/evilchili/: index.html
deadsands/output/lore/: index.html
deadsands/output/lore/cities-and-trade/: index.html
deadsands/output/lore/demographics/: index.html
deadsands/output/lore/factions/: index.html
deadsands/output/lore/languages/: index.html
deadsands/output/regions/: index.html
deadsands/output/regions/blooming-wastes/: index.html
deadsands/output/session0/: index.html
deadsands/output/session0/glossary/: index.html
deadsands/output/session0/on-genre-theme-and-mechanics/: index.html
deadsands/output/style/: index.html
deadsands/output/tags/: index.html
deadsands/output/tags/homebrew/: index.html
deadsands/output/tags/lore-faction/: index.html
deadsands/output/tags/region-homebrew/: index.html
deadsands/site_tools/: __init__.py  build_system.py  campaign.py  cli.py  console.py  content_manager.py  extensions.py  hoppers.py  jobs.py  shell.py  striders.py  tasks.py
deadsands/site_tools/content/dm/: some-post.md
deadsands/site_tools/content/regions/: region-name.md
deadsands/site_tools/shell/: __init__.py  base.py  interactive_shell.py
deadsands/sources/: encounters.yaml  flora.yaml  locations.yaml  psychadelic_effects.yaml  regional_effects.yaml  sahwat_magic_table.yaml  trinkets.yaml  weather.yaml
deadsands/sources/stores/: angry_andoks_apothecary.yaml  generals_store.yaml
deadsands/test/: test_jobs.py
deadsands/www/: Makefile  devconf.py  tables.py  tasks.py
deadsands/www/content/lore/: factions.md  languages.md
deadsands/www/content/pages/: index.md
deadsands/www/content/regions/: blooming-wastes.md
deadsands/www/content/session0/: glossary.md  on-genre-theme-and-mechanics.md
deadsands/www/deadsands-theme/old/: cards.html  category-pagination.html  category-signs.html  pagination.html
deadsands/www/deadsands-theme/static/deadsands/css/: style.css
deadsands/www/deadsands-theme/templates/: base.html  categories.html  category-index.html  index.html  tag-index.html  tags.html
deadsands/www/markdown-templates/: default.md
deadsands/www/sources/: weather.yaml
